--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=backend
-spring.datasource.url=jdbc:mysql://localhost:3306/reglus_db?useSSL=false&serverTimezone=UTC
+spring.datasource.url=mysql://root:TwexpERzXqftkJEkbzsOuWjWDhTxRKjo@mysql.railway.internal:3306/railway
 spring.datasource.username=root
-spring.datasource.password=rootroot
+spring.datasource.password=TwexpERzXqftkJEkbzsOuWjWDhTxRKjo
 
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
