--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
-spring.application.name=backend
-spring.datasource.url=mysql://root:TwexpERzXqftkJEkbzsOuWjWDhTxRKjo@mysql.railway.internal:3306/railway
-spring.datasource.username=root
-spring.datasource.password=TwexpERzXqftkJEkbzsOuWjWDhTxRKjo
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST}:${MYSQL_PORT}/nome_do_banco
+spring.datasource.username=${MYSQL_USER}
+spring.datasource.password=${MYSQL_PASSWORD}
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
