--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:mysql://${MYSQL_HOST}:${MYSQL_PORT}/nome_do_banco
-spring.datasource.username=${MYSQL_USER}
-spring.datasource.password=${MYSQL_PASSWORD}
+spring.datasource.url=jdbc:mysql://$mysql.railway.internal:3306/railway
+spring.datasource.username=$root
+spring.datasource.password=$TwexpERzXqftkJEkbzsOuWjWDhTxRKjo
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.servlet.multipart.max-file-size=10MB
