--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,7 @@ spring.servlet.multipart.max-request-size=10MB
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+
+spring.webflux.cors.allowed-origins=http://localhost:4200
+spring.webflux.cors.allowed-methods=GET,POST,PUT,DELETE
+spring.webflux.cors.allowed-headers=*
