--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql://mysql.railway.internal:3306/railway
+spring.datasource.url=jdbc:mysql://mysql-fein.railway.internal:3306/railway
 spring.datasource.username=root
 spring.datasource.password=RAIgsKxjMpDfSTFWamlnlSuDpbSxUZoX
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
